[project]
name = "traffic-lens"
version = "0.1.0"
description = "천안시 CCTV 영상(RTSP) 시각화 프로그램"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens==3.0.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "colorama==0.4.6",
    "comm==0.2.3",
    "debugpy==1.8.16",
    "decorator==5.2.1",
    "executing==2.2.1",
    "idna==3.10",
    "ipykernel==6.30.1",
    "ipython==9.5.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "packaging==25.0",
    "parso==0.8.5",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "prompt-toolkit==3.0.52",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "pywin32==311",
    "pyzmq==27.1.0",
    "requests==2.32.5",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "urllib3==2.5.0",
    "wcwidth==0.2.13",
]
